// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dayz limits days to min/max displayed 1`] = `
"<Dayz displayHours={{...}} display=\\"week\\" date={{...}} events={{...}} locale=\\"en\\">
  <div className=\\"dayz week\\">
    <XLabels date={{...}} display=\\"week\\" dateFormat={[undefined]} locale=\\"en\\" weekStartsOn={[undefined]}>
      <div className=\\"x-labels\\">
        <div className=\\"day-label\\">
          Sun, Nov 11th
        </div>
        <div className=\\"day-label\\">
          Mon, Nov 12th
        </div>
        <div className=\\"day-label\\">
          Tue, Nov 13th
        </div>
        <div className=\\"day-label\\">
          Wed, Nov 14th
        </div>
        <div className=\\"day-label\\">
          Thu, Nov 15th
        </div>
        <div className=\\"day-label\\">
          Fri, Nov 16th
        </div>
        <div className=\\"day-label\\">
          Sat, Nov 17th
        </div>
      </div>
    </XLabels>
    <div className=\\"body\\">
      <YLabels layout={{...}} display=\\"week\\" date={{...}} timeFormat=\\"ha\\">
        <div>
          <div className=\\"y-labels\\">
            <div className=\\"all-day\\" style={{...}}>
              All Day
            </div>
            <div className=\\"hour\\">
              6am
            </div>
            <div className=\\"hour\\">
              7am
            </div>
            <div className=\\"hour\\">
              8am
            </div>
            <div className=\\"hour\\">
              9am
            </div>
            <div className=\\"hour\\">
              10am
            </div>
            <div className=\\"hour\\">
              11am
            </div>
            <div className=\\"hour\\">
              12pm
            </div>
            <div className=\\"hour\\">
              1pm
            </div>
            <div className=\\"hour\\">
              2pm
            </div>
            <div className=\\"hour\\">
              3pm
            </div>
            <div className=\\"hour\\">
              4pm
            </div>
            <div className=\\"hour\\">
              5pm
            </div>
            <div className=\\"hour\\">
              6pm
            </div>
            <div className=\\"hour\\">
              7pm
            </div>
            <div className=\\"hour\\">
              8pm
            </div>
            <div className=\\"hour\\">
              9pm
            </div>
          </div>
        </div>
      </YLabels>
      <div className=\\"days\\">
        <Day day={{...}} position={0} layout={{...}} editComponent={[undefined]} handlers={{...}} eventHandlers={[undefined]} onEventClick={[undefined]} onEventResize={[undefined]}>
          <div className=\\"day before\\" data-date=\\"20181111\\" style={{...}} onClick={[Function: bound onClick]} onDoubleClick={[Function: bound onDoubleClick]}>
            <Label day={{...}} className=\\"label\\">
              <div className=\\"label\\">
                11
              </div>
            </Label>
            <div className=\\"all-day\\" style={{...}} />
          </div>
        </Day>
        <Day day={{...}} position={1} layout={{...}} editComponent={[undefined]} handlers={{...}} eventHandlers={[undefined]} onEventClick={[undefined]} onEventResize={[undefined]}>
          <div className=\\"day before\\" data-date=\\"20181112\\" style={{...}} onClick={[Function: bound onClick]} onDoubleClick={[Function: bound onDoubleClick]}>
            <Label day={{...}} className=\\"label\\">
              <div className=\\"label\\">
                12
              </div>
            </Label>
            <div className=\\"all-day\\" style={{...}} />
          </div>
        </Day>
        <Day day={{...}} position={2} layout={{...}} editComponent={[undefined]} handlers={{...}} eventHandlers={[undefined]} onEventClick={[undefined]} onEventResize={[undefined]}>
          <div className=\\"day before\\" data-date=\\"20181113\\" style={{...}} onClick={[Function: bound onClick]} onDoubleClick={[Function: bound onDoubleClick]}>
            <Label day={{...}} className=\\"label\\">
              <div className=\\"label\\">
                13
              </div>
            </Label>
            <div className=\\"all-day\\" style={{...}} />
          </div>
        </Day>
        <Day day={{...}} position={3} layout={{...}} editComponent={[undefined]} handlers={{...}} eventHandlers={[undefined]} onEventClick={[undefined]} onEventResize={[undefined]}>
          <div className=\\"day current\\" data-date=\\"20181114\\" style={{...}} onClick={[Function: bound onClick]} onDoubleClick={[Function: bound onDoubleClick]}>
            <Label day={{...}} className=\\"label\\">
              <div className=\\"label\\">
                14
              </div>
            </Label>
            <div className=\\"all-day\\" style={{...}} />
            <div className=\\"events\\" onMouseMove={[Function: bound onMouseMove]} onMouseUp={[Function: bound onMouseUp]}>
              <Event duration={{...}} day={{...}} parent={{...}} onDragStart={[Function: bound onDragStart]} onClick={[undefined]} editComponent={[undefined]} onDoubleClick={[undefined]}>
                <div onMouseDown={[Function: bound onDragStart]} style={{...}} className=\\"event span-1 a-test-day\\">
                  <div className=\\"evbody\\" onClick={[Function: bound onClick]}>
                    <div>
                      allmost all day
                    </div>
                  </div>
                </div>
              </Event>
            </div>
          </div>
        </Day>
        <Day day={{...}} position={4} layout={{...}} editComponent={[undefined]} handlers={{...}} eventHandlers={[undefined]} onEventClick={[undefined]} onEventResize={[undefined]}>
          <div className=\\"day after\\" data-date=\\"20181115\\" style={{...}} onClick={[Function: bound onClick]} onDoubleClick={[Function: bound onDoubleClick]}>
            <Label day={{...}} className=\\"label\\">
              <div className=\\"label\\">
                15
              </div>
            </Label>
            <div className=\\"all-day\\" style={{...}} />
          </div>
        </Day>
        <Day day={{...}} position={5} layout={{...}} editComponent={[undefined]} handlers={{...}} eventHandlers={[undefined]} onEventClick={[undefined]} onEventResize={[undefined]}>
          <div className=\\"day after\\" data-date=\\"20181116\\" style={{...}} onClick={[Function: bound onClick]} onDoubleClick={[Function: bound onDoubleClick]}>
            <Label day={{...}} className=\\"label\\">
              <div className=\\"label\\">
                16
              </div>
            </Label>
            <div className=\\"all-day\\" style={{...}} />
          </div>
        </Day>
        <Day day={{...}} position={6} layout={{...}} editComponent={[undefined]} handlers={{...}} eventHandlers={[undefined]} onEventClick={[undefined]} onEventResize={[undefined]}>
          <div className=\\"day after\\" data-date=\\"20181117\\" style={{...}} onClick={[Function: bound onClick]} onDoubleClick={[Function: bound onDoubleClick]}>
            <Label day={{...}} className=\\"label\\">
              <div className=\\"label\\">
                17
              </div>
            </Label>
            <div className=\\"all-day\\" style={{...}} />
          </div>
        </Day>
      </div>
    </div>
  </div>
</Dayz>"
`;

exports[`Dayz localizes to specified locale 1`] = `
<div
  className="dayz month"
>
  <div
    className="x-labels"
  >
    <div
      className="day-label"
    >
      Montag
    </div>
    <div
      className="day-label"
    >
      Dienstag
    </div>
    <div
      className="day-label"
    >
      Mittwoch
    </div>
    <div
      className="day-label"
    >
      Donnerstag
    </div>
    <div
      className="day-label"
    >
      Freitag
    </div>
    <div
      className="day-label"
    >
      Samstag
    </div>
    <div
      className="day-label"
    >
      Sonntag
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="days"
    >
      <div
        className="day before outside"
        data-date="20150831"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 0,
          }
        }
      >
        <div
          className="label"
        >
          31
        </div>
      </div>
      <div
        className="day before"
        data-date="20150901"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 1,
          }
        }
      >
        <div
          className="label"
        >
          1
        </div>
      </div>
      <div
        className="day before"
        data-date="20150902"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 2,
          }
        }
      >
        <div
          className="label"
        >
          2
        </div>
      </div>
      <div
        className="day before"
        data-date="20150903"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 3,
          }
        }
      >
        <div
          className="label"
        >
          3
        </div>
      </div>
      <div
        className="day before"
        data-date="20150904"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 4,
          }
        }
      >
        <div
          className="label"
        >
          4
        </div>
      </div>
      <div
        className="day before"
        data-date="20150905"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 5,
          }
        }
      >
        <div
          className="label"
        >
          5
        </div>
      </div>
      <div
        className="day before"
        data-date="20150906"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 6,
          }
        }
      >
        <div
          className="label"
        >
          6
        </div>
      </div>
      <div
        className="day before"
        data-date="20150907"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 7,
          }
        }
      >
        <div
          className="label"
        >
          7
        </div>
      </div>
      <div
        className="day before"
        data-date="20150908"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 8,
          }
        }
      >
        <div
          className="label"
        >
          8
        </div>
      </div>
      <div
        className="day before"
        data-date="20150909"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 9,
          }
        }
      >
        <div
          className="label"
        >
          9
        </div>
      </div>
      <div
        className="day before"
        data-date="20150910"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 10,
          }
        }
      >
        <div
          className="label"
        >
          10
        </div>
      </div>
      <div
        className="day before"
        data-date="20150911"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 11,
          }
        }
      >
        <div
          className="label"
        >
          11
        </div>
      </div>
      <div
        className="day current"
        data-date="20150912"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 12,
          }
        }
      >
        <div
          className="label"
        >
          12
        </div>
      </div>
      <div
        className="day after"
        data-date="20150913"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 13,
          }
        }
      >
        <div
          className="label"
        >
          13
        </div>
      </div>
      <div
        className="day after"
        data-date="20150914"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 14,
          }
        }
      >
        <div
          className="label"
        >
          14
        </div>
      </div>
      <div
        className="day after"
        data-date="20150915"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 15,
          }
        }
      >
        <div
          className="label"
        >
          15
        </div>
      </div>
      <div
        className="day after"
        data-date="20150916"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 16,
          }
        }
      >
        <div
          className="label"
        >
          16
        </div>
      </div>
      <div
        className="day after"
        data-date="20150917"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 17,
          }
        }
      >
        <div
          className="label"
        >
          17
        </div>
      </div>
      <div
        className="day after"
        data-date="20150918"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 18,
          }
        }
      >
        <div
          className="label"
        >
          18
        </div>
      </div>
      <div
        className="day after"
        data-date="20150919"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 19,
          }
        }
      >
        <div
          className="label"
        >
          19
        </div>
      </div>
      <div
        className="day after"
        data-date="20150920"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 20,
          }
        }
      >
        <div
          className="label"
        >
          20
        </div>
      </div>
      <div
        className="day after"
        data-date="20150921"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 21,
          }
        }
      >
        <div
          className="label"
        >
          21
        </div>
      </div>
      <div
        className="day after"
        data-date="20150922"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 22,
          }
        }
      >
        <div
          className="label"
        >
          22
        </div>
      </div>
      <div
        className="day after"
        data-date="20150923"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 23,
          }
        }
      >
        <div
          className="label"
        >
          23
        </div>
      </div>
      <div
        className="day after"
        data-date="20150924"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 24,
          }
        }
      >
        <div
          className="label"
        >
          24
        </div>
      </div>
      <div
        className="day after"
        data-date="20150925"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 25,
          }
        }
      >
        <div
          className="label"
        >
          25
        </div>
      </div>
      <div
        className="day after"
        data-date="20150926"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 26,
          }
        }
      >
        <div
          className="label"
        >
          26
        </div>
      </div>
      <div
        className="day after"
        data-date="20150927"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 27,
          }
        }
      >
        <div
          className="label"
        >
          27
        </div>
      </div>
      <div
        className="day after"
        data-date="20150928"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 28,
          }
        }
      >
        <div
          className="label"
        >
          28
        </div>
      </div>
      <div
        className="day after"
        data-date="20150929"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 29,
          }
        }
      >
        <div
          className="label"
        >
          29
        </div>
      </div>
      <div
        className="day after"
        data-date="20150930"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 30,
          }
        }
      >
        <div
          className="label"
        >
          30
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151001"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 31,
          }
        }
      >
        <div
          className="label"
        >
          1
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151002"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 32,
          }
        }
      >
        <div
          className="label"
        >
          2
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151003"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 33,
          }
        }
      >
        <div
          className="label"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dayz matches snapshot for day 1`] = `
<div
  className="dayz day"
>
  <div
    className="x-labels"
  >
    <div
      className="day-label"
    >
      Sat, Sep 12th
    </div>
  </div>
  <div
    className="body"
  >
    <div>
      <div
        className="y-labels"
      >
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        >
          All Day
        </div>
        <div
          className="hour"
        >
          7am
        </div>
        <div
          className="hour"
        >
          8am
        </div>
        <div
          className="hour"
        >
          9am
        </div>
        <div
          className="hour"
        >
          10am
        </div>
        <div
          className="hour"
        >
          11am
        </div>
        <div
          className="hour"
        >
          12pm
        </div>
        <div
          className="hour"
        >
          1pm
        </div>
        <div
          className="hour"
        >
          2pm
        </div>
        <div
          className="hour"
        >
          3pm
        </div>
        <div
          className="hour"
        >
          4pm
        </div>
        <div
          className="hour"
        >
          5pm
        </div>
        <div
          className="hour"
        >
          6pm
        </div>
        <div
          className="hour"
        >
          7pm
        </div>
      </div>
    </div>
    <div
      className="days"
    >
      <div
        className="day current"
        data-date="20150912"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 0,
          }
        }
      >
        <div
          className="label"
        >
          12
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dayz matches snapshot for month 1`] = `
<div
  className="dayz month"
>
  <div
    className="x-labels"
  >
    <div
      className="day-label"
    >
      Sunday
    </div>
    <div
      className="day-label"
    >
      Monday
    </div>
    <div
      className="day-label"
    >
      Tuesday
    </div>
    <div
      className="day-label"
    >
      Wednesday
    </div>
    <div
      className="day-label"
    >
      Thursday
    </div>
    <div
      className="day-label"
    >
      Friday
    </div>
    <div
      className="day-label"
    >
      Saturday
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="days"
    >
      <div
        className="day before outside"
        data-date="20150830"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 0,
          }
        }
      >
        <div
          className="label"
        >
          30
        </div>
      </div>
      <div
        className="day before outside"
        data-date="20150831"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 1,
          }
        }
      >
        <div
          className="label"
        >
          31
        </div>
      </div>
      <div
        className="day before"
        data-date="20150901"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 2,
          }
        }
      >
        <div
          className="label"
        >
          1
        </div>
      </div>
      <div
        className="day before"
        data-date="20150902"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 3,
          }
        }
      >
        <div
          className="label"
        >
          2
        </div>
      </div>
      <div
        className="day before"
        data-date="20150903"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 4,
          }
        }
      >
        <div
          className="label"
        >
          3
        </div>
      </div>
      <div
        className="day before"
        data-date="20150904"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 5,
          }
        }
      >
        <div
          className="label"
        >
          4
        </div>
      </div>
      <div
        className="day before"
        data-date="20150905"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 6,
          }
        }
      >
        <div
          className="label"
        >
          5
        </div>
      </div>
      <div
        className="day before"
        data-date="20150906"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 7,
          }
        }
      >
        <div
          className="label"
        >
          6
        </div>
      </div>
      <div
        className="day before"
        data-date="20150907"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 8,
          }
        }
      >
        <div
          className="label"
        >
          7
        </div>
      </div>
      <div
        className="day before"
        data-date="20150908"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 9,
          }
        }
      >
        <div
          className="label"
        >
          8
        </div>
      </div>
      <div
        className="day before"
        data-date="20150909"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 10,
          }
        }
      >
        <div
          className="label"
        >
          9
        </div>
      </div>
      <div
        className="day before"
        data-date="20150910"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 11,
          }
        }
      >
        <div
          className="label"
        >
          10
        </div>
      </div>
      <div
        className="day before"
        data-date="20150911"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 12,
          }
        }
      >
        <div
          className="label"
        >
          11
        </div>
      </div>
      <div
        className="day current"
        data-date="20150912"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 13,
          }
        }
      >
        <div
          className="label"
        >
          12
        </div>
      </div>
      <div
        className="day after"
        data-date="20150913"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 14,
          }
        }
      >
        <div
          className="label"
        >
          13
        </div>
      </div>
      <div
        className="day after"
        data-date="20150914"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 15,
          }
        }
      >
        <div
          className="label"
        >
          14
        </div>
      </div>
      <div
        className="day after"
        data-date="20150915"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 16,
          }
        }
      >
        <div
          className="label"
        >
          15
        </div>
      </div>
      <div
        className="day after"
        data-date="20150916"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 17,
          }
        }
      >
        <div
          className="label"
        >
          16
        </div>
      </div>
      <div
        className="day after"
        data-date="20150917"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 18,
          }
        }
      >
        <div
          className="label"
        >
          17
        </div>
      </div>
      <div
        className="day after"
        data-date="20150918"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 19,
          }
        }
      >
        <div
          className="label"
        >
          18
        </div>
      </div>
      <div
        className="day after"
        data-date="20150919"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 20,
          }
        }
      >
        <div
          className="label"
        >
          19
        </div>
      </div>
      <div
        className="day after"
        data-date="20150920"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 21,
          }
        }
      >
        <div
          className="label"
        >
          20
        </div>
      </div>
      <div
        className="day after"
        data-date="20150921"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 22,
          }
        }
      >
        <div
          className="label"
        >
          21
        </div>
      </div>
      <div
        className="day after"
        data-date="20150922"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 23,
          }
        }
      >
        <div
          className="label"
        >
          22
        </div>
      </div>
      <div
        className="day after"
        data-date="20150923"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 24,
          }
        }
      >
        <div
          className="label"
        >
          23
        </div>
      </div>
      <div
        className="day after"
        data-date="20150924"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 25,
          }
        }
      >
        <div
          className="label"
        >
          24
        </div>
      </div>
      <div
        className="day after"
        data-date="20150925"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 26,
          }
        }
      >
        <div
          className="label"
        >
          25
        </div>
      </div>
      <div
        className="day after"
        data-date="20150926"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 27,
          }
        }
      >
        <div
          className="label"
        >
          26
        </div>
      </div>
      <div
        className="day after"
        data-date="20150927"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 28,
          }
        }
      >
        <div
          className="label"
        >
          27
        </div>
      </div>
      <div
        className="day after"
        data-date="20150928"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 29,
          }
        }
      >
        <div
          className="label"
        >
          28
        </div>
      </div>
      <div
        className="day after"
        data-date="20150929"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 30,
          }
        }
      >
        <div
          className="label"
        >
          29
        </div>
      </div>
      <div
        className="day after"
        data-date="20150930"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 31,
          }
        }
      >
        <div
          className="label"
        >
          30
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151001"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 32,
          }
        }
      >
        <div
          className="label"
        >
          1
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151002"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 33,
          }
        }
      >
        <div
          className="label"
        >
          2
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151003"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 34,
          }
        }
      >
        <div
          className="label"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dayz matches snapshot for week 1`] = `
<div
  className="dayz week"
>
  <div
    className="x-labels"
  >
    <div
      className="day-label"
    >
      Sun, Sep 6th
    </div>
    <div
      className="day-label"
    >
      Mon, Sep 7th
    </div>
    <div
      className="day-label"
    >
      Tue, Sep 8th
    </div>
    <div
      className="day-label"
    >
      Wed, Sep 9th
    </div>
    <div
      className="day-label"
    >
      Thu, Sep 10th
    </div>
    <div
      className="day-label"
    >
      Fri, Sep 11th
    </div>
    <div
      className="day-label"
    >
      Sat, Sep 12th
    </div>
  </div>
  <div
    className="body"
  >
    <div>
      <div
        className="y-labels"
      >
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        >
          All Day
        </div>
        <div
          className="hour"
        >
          7am
        </div>
        <div
          className="hour"
        >
          8am
        </div>
        <div
          className="hour"
        >
          9am
        </div>
        <div
          className="hour"
        >
          10am
        </div>
        <div
          className="hour"
        >
          11am
        </div>
        <div
          className="hour"
        >
          12pm
        </div>
        <div
          className="hour"
        >
          1pm
        </div>
        <div
          className="hour"
        >
          2pm
        </div>
        <div
          className="hour"
        >
          3pm
        </div>
        <div
          className="hour"
        >
          4pm
        </div>
        <div
          className="hour"
        >
          5pm
        </div>
        <div
          className="hour"
        >
          6pm
        </div>
        <div
          className="hour"
        >
          7pm
        </div>
      </div>
    </div>
    <div
      className="days"
    >
      <div
        className="day before"
        data-date="20150906"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 0,
          }
        }
      >
        <div
          className="label"
        >
          6
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
      <div
        className="day before"
        data-date="20150907"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 1,
          }
        }
      >
        <div
          className="label"
        >
          7
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
      <div
        className="day before"
        data-date="20150908"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 2,
          }
        }
      >
        <div
          className="label"
        >
          8
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
      <div
        className="day before"
        data-date="20150909"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 3,
          }
        }
      >
        <div
          className="label"
        >
          9
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
      <div
        className="day before"
        data-date="20150910"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 4,
          }
        }
      >
        <div
          className="label"
        >
          10
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
      <div
        className="day before"
        data-date="20150911"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 5,
          }
        }
      >
        <div
          className="label"
        >
          11
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
      <div
        className="day current"
        data-date="20150912"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 6,
          }
        }
      >
        <div
          className="label"
        >
          12
        </div>
        <div
          className="all-day"
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dayz renders highlights 1`] = `
<div
  className="dayz month"
>
  <div
    className="x-labels"
  >
    <div
      className="day-label"
    >
      Sunday
    </div>
    <div
      className="day-label"
    >
      Monday
    </div>
    <div
      className="day-label"
    >
      Tuesday
    </div>
    <div
      className="day-label"
    >
      Wednesday
    </div>
    <div
      className="day-label"
    >
      Thursday
    </div>
    <div
      className="day-label"
    >
      Friday
    </div>
    <div
      className="day-label"
    >
      Saturday
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="days"
    >
      <div
        className="day before outside"
        data-date="20150830"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 0,
          }
        }
      >
        <div
          className="label"
        >
          30
        </div>
      </div>
      <div
        className="day before outside"
        data-date="20150831"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 1,
          }
        }
      >
        <div
          className="label"
        >
          31
        </div>
      </div>
      <div
        className="day before"
        data-date="20150901"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 2,
          }
        }
      >
        <div
          className="label"
        >
          1
        </div>
      </div>
      <div
        className="day before"
        data-date="20150902"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 3,
          }
        }
      >
        <div
          className="label"
        >
          2
        </div>
      </div>
      <div
        className="day before"
        data-date="20150903"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 4,
          }
        }
      >
        <div
          className="label"
        >
          3
        </div>
      </div>
      <div
        className="day before highlight"
        data-date="20150904"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 5,
          }
        }
      >
        <div
          className="label"
        >
          4
        </div>
      </div>
      <div
        className="day before highlight"
        data-date="20150905"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 6,
          }
        }
      >
        <div
          className="label"
        >
          5
        </div>
      </div>
      <div
        className="day before"
        data-date="20150906"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 7,
          }
        }
      >
        <div
          className="label"
        >
          6
        </div>
      </div>
      <div
        className="day before"
        data-date="20150907"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 8,
          }
        }
      >
        <div
          className="label"
        >
          7
        </div>
      </div>
      <div
        className="day before"
        data-date="20150908"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 9,
          }
        }
      >
        <div
          className="label"
        >
          8
        </div>
      </div>
      <div
        className="day before"
        data-date="20150909"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 10,
          }
        }
      >
        <div
          className="label"
        >
          9
        </div>
      </div>
      <div
        className="day before"
        data-date="20150910"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 11,
          }
        }
      >
        <div
          className="label"
        >
          10
        </div>
      </div>
      <div
        className="day before"
        data-date="20150911"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 12,
          }
        }
      >
        <div
          className="label"
        >
          11
        </div>
      </div>
      <div
        className="day current"
        data-date="20150912"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 13,
          }
        }
      >
        <div
          className="label"
        >
          12
        </div>
      </div>
      <div
        className="day after"
        data-date="20150913"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 14,
          }
        }
      >
        <div
          className="label"
        >
          13
        </div>
      </div>
      <div
        className="day after"
        data-date="20150914"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 15,
          }
        }
      >
        <div
          className="label"
        >
          14
        </div>
      </div>
      <div
        className="day after"
        data-date="20150915"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 16,
          }
        }
      >
        <div
          className="label"
        >
          15
        </div>
      </div>
      <div
        className="day after"
        data-date="20150916"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 17,
          }
        }
      >
        <div
          className="label"
        >
          16
        </div>
      </div>
      <div
        className="day after"
        data-date="20150917"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 18,
          }
        }
      >
        <div
          className="label"
        >
          17
        </div>
      </div>
      <div
        className="day after"
        data-date="20150918"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 19,
          }
        }
      >
        <div
          className="label"
        >
          18
        </div>
      </div>
      <div
        className="day after"
        data-date="20150919"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 20,
          }
        }
      >
        <div
          className="label"
        >
          19
        </div>
      </div>
      <div
        className="day after"
        data-date="20150920"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 21,
          }
        }
      >
        <div
          className="label"
        >
          20
        </div>
      </div>
      <div
        className="day after"
        data-date="20150921"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 22,
          }
        }
      >
        <div
          className="label"
        >
          21
        </div>
      </div>
      <div
        className="day after"
        data-date="20150922"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 23,
          }
        }
      >
        <div
          className="label"
        >
          22
        </div>
      </div>
      <div
        className="day after"
        data-date="20150923"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 24,
          }
        }
      >
        <div
          className="label"
        >
          23
        </div>
      </div>
      <div
        className="day after"
        data-date="20150924"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 25,
          }
        }
      >
        <div
          className="label"
        >
          24
        </div>
      </div>
      <div
        className="day after"
        data-date="20150925"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 26,
          }
        }
      >
        <div
          className="label"
        >
          25
        </div>
      </div>
      <div
        className="day after"
        data-date="20150926"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 27,
          }
        }
      >
        <div
          className="label"
        >
          26
        </div>
      </div>
      <div
        className="day after"
        data-date="20150927"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 28,
          }
        }
      >
        <div
          className="label"
        >
          27
        </div>
      </div>
      <div
        className="day after"
        data-date="20150928"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 29,
          }
        }
      >
        <div
          className="label"
        >
          28
        </div>
      </div>
      <div
        className="day after"
        data-date="20150929"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 30,
          }
        }
      >
        <div
          className="label"
        >
          29
        </div>
      </div>
      <div
        className="day after"
        data-date="20150930"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 31,
          }
        }
      >
        <div
          className="label"
        >
          30
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151001"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 32,
          }
        }
      >
        <div
          className="label"
        >
          1
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151002"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 33,
          }
        }
      >
        <div
          className="label"
        >
          2
        </div>
      </div>
      <div
        className="day after outside"
        data-date="20151003"
        onClick={[Function]}
        onDoubleClick={[Function]}
        style={
          Object {
            "order": 34,
          }
        }
      >
        <div
          className="label"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;
